# Firefly

./: .gitignore  pyproject.toml  test_server_singleton.py
agent/: AgentRegister.py  BaseAgent.py  Firefly.py  SimpleAgent.py  __init__.py
config/: config.py
context/: context.py  sketch_pad.py
tools/: __init__.py  command_tools.py  device_operation.py  screen_capture.py
web_interface/: server.py
